preferences con icon

--- a/views/private/preferences.hbs
+++ b/views/private/preferences.hbs
@@ -1,27 +1,82 @@
-<div>
-  <section>
-    <img src="" alt="">
-    <h3> Victor Gonzalez </h3>
-    <button>
-      logout
-    </button>
-  </section>
-  <section>
-    
-  </section>
-</div>
+<h2>
+  Selecciona tus preferidos
+</h2>
 
 <div class="cards"> 
 
 <form action="/preferences" method="POST">
-  <div>
-    <img src="/images/iconos/food.png" alt="restaurant icon">
+
+  <div class="card-preferences">
+    <img src="/images/iconos/food.png" alt="restaurant_icon">
     <p>Restaurantes</p>
-    <input type="checkbox" class="small space">
-</div>
-<div>
-
+    <input type="checkbox" name="restaurante" value="Restaurante"> 
 </div>
 
+<div class="card-preferences">
+    <img src="/images/iconos/cafeteria.png" alt="cafeteria_icon">
+    <p>Cafetería</p>
+    <input type="checkbox" name="cafeteria" value="Cafetería"> 
+</div>
+
+<div class="card-preferences">
+<img src="/images/iconos/beer.png" alt="beer_icon">
+<p>Bares</p>
+<input type="checkbox" name="bar" value="Bar"> 
+</div>
+
+<div class="card-preferences">
+  <img src="/images/iconos/video-camera.png" alt="cinema_icon">
+  <p>Cines</p>
+  <input type="checkbox" name="cine" value="Cine"> 
+</div>
+
+<div class="card-preferences">
+  <img src="/images/iconos/museum.png" alt="cinema_icon">
+  <p>Sitios Históricos</p>
+  <input type="checkbox" name="sitos_historicos" value="Sitio_Histórico">
+</div>
+
+<div class="card-preferences">
+  <img src="/images/iconos/museum.png" alt="museum_icon">
+  <p>Sitios Históricos</p>
+  <input type="checkbox" name="sitos_historicos" value="Sitio_Histórico">
+</div>
+
+<div class="card-preferences">
+  <img src="/images/iconos/park.png" alt="park_icon">
+  <p>Parque</p>
+  <input type="checkbox" name="parque" value="Parque">
+</div>
+
+<div class="card-preferences">
+  <img src="/images/iconos/gym.png" alt="gym_icon">
+  <p>Gimnasios</p>
+  <input type="checkbox" name="gimnasio" value="Gimnasio">
+</div>
+ 
+ <div class="card-preferences">
+  <img src="/images/iconos/metro.png" alt="metro_icon">
+  <p>Metro</p>
+  <input type="checkbox" name="metro" value="Metro">
+ </div>
+
+ <div class="card-preferences">
+  <img src="/images/iconos/metrobus_mexico.png" alt="metrobus_icon">
+  <p>Metro</p>
+  <input type="checkbox" name="metrobus" value="Metrobus">
+ </div>
+
+ <div class="card-preferences">
+  <img src="/images/iconos/logo-ecobici.png" alt="ecobici_icon">
+  <p>Ecobici</p>
+  <input type="checkbox" name="ecobici" value="Ecobici">
+ </div>
+
+  <div class="card-preferences">
+  <img src="/images/iconos/parking.png" alt="parking_icon">
+  <p>Ecobici</p>
+  <input type="checkbox" name="estacionamiento" value="Estacionamiento">
+ </div>
+ 
 </form>
 </div>
